<resources>
    <string name="app_name">ComTieTea</string>
    <string name="log_out">CERRAR SESIÓN</string>

    <string name="action_edit">Editar</string>
    <string name="action_delete">Borrar</string>
    <string name="action_settings">Cuenta asociada</string>
    <string name="action_info">Acerca de</string>

    <string name="numbers_prompt">Importancia (1-10)</string>
    <string-array name="numbers">
        <item>1 (Menos importante)</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10 (Más importante)</item>
    </string-array>

    <string name="alarma_prompt">Alarma</string>
    <string name="aviso_prompt">Notificación</string>
    <string name="antelacion_prompt">Antelación</string>
    <string-array name="si_no">
        <item>Si</item>
        <item>No</item>
    </string-array>
    <string-array name="antelacion">
        <item>5 Minutos</item>
        <item>10 Minutos</item>
        <item>15 Minutos</item>
        <item>30 Minutos</item>
        <item>1 Hora</item>
    </string-array>
</resources>
