<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
	    android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item android:id="@+id/action_info"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_info"
        app:showAsAction="never" />
</menu>